# pyta-research

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260301_0001_init_schema.py  20260302_0002_add_derived_factors.py  20260302_0003_add_strategy_card.py  20260302_0004_add_trade_log.py  20260305_0005_strategy_card_v2_fields.py  20260305_0006_add_action_queue_execution_log.py  20260321_0007_add_sandbox_tables.py  20260323_0008_add_source_event_symbols.py
docs/: ._FAQ.md  BRANCH_CONFLICT_PLAYBOOK.md  CHANGELOG.md  ERD.md  FAQ.md  FRAMEWORK.md  LAYER2_HANDOFF.md  LAYER2_ROADMAP.md  LEGACY_WORLD_CLEANUP_AUDIT.md  MOTION_EXECUTION_CHECKLIST.md  RESEARCH_CANVAS_DESIGN_SPEC.md  RESEARCH_CANVAS_DEV_PROMPT.md  SANDBOX_CLI_QUICKSTART.md  SECONDARY_MARKET_BRANCH_HANDOFF.md  TROUBLESHOOTING.md  UI_PROTOTYPE_NOTE.md  UI_SYSTEM_STANDARD_MANUAL.md  USAGE.md  multi_agent_sandbox_fusion_direction.html
frontend/: vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: diagnose_single_agent.py
src/: cli.py  types.py
src/api/: app.py  deps.py  settings_store.py
src/config/: settings.py
src/data/: canonical.py  store.py
src/db/: models.py  session.py
src/decision/: advisor.py  report.py
src/factors/: calculator.py
src/fetchers/: base.py
src/portfolio/: tracker.py
src/quality/: checker.py  report.py  rules.py
src/report/: generator.py  pusher.py
src/risk/: checker.py
tests/: __init__.py  conftest.py
(+179 files in other folders)
